--- a/index1.html
+++ b/index1.html
@@ -81,7 +81,8 @@
       <div class="col-md-6">
 
         <div class="d-flex flex-column justify-content-center align-items-center h-100">
-          <h1 class="heading display-3" style="padding-top: 50px">Hello, I am Aqueef Alim Ansari</h1>
+          <h6 class="heading display-3" style="padding-top: 50px">Hello I am,</h6>
+          <h1 class="heading display-3">Aqueef Alim Ansari</h1>
           <h4 class="subheading font-weight-bold">Computer Science Engineer| Web Developer | Cool.</h4>
           <div class="mr-auto">
             <button type="button" class="btn btn-lily btn-margin btn-rounded">check my CV <i class="fas fa-caret-right ml-3"></i></button>
