--- a/index1.html
+++ b/index1.html
@@ -80,8 +80,8 @@
 
       <div class="col-md-6">
 
-        <div class="d-flex flex-column justify-content-center align-items-center h-100">
-          <h6 class="heading display-3" style="padding-top: 50px">Hello I am,</h6>
+        <div class="d-flex flex-column justify-content-center h-100">
+          <h6 class="heading display-3" style="padding-top: 50px; font-weight: bold; padding-left: 100px;">Hello I am,</h6>
           <h1 class="heading display-3">Aqueef Alim Ansari</h1>
           <h4 class="subheading font-weight-bold">Computer Science Engineer| Web Developer | Cool.</h4>
           <div class="mr-auto">
