--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,7 @@
 
 
 </head>
-
+<body>
 <!--Main Navigation-->
 <header>
 
@@ -81,7 +81,7 @@
       <div class="col-md-6">
 
         <div class="d-flex flex-column justify-content-center h-100">
-          <h6 style="padding-top: 80px; font-weight: bold; padding-left: 100px;">Hello I am,</h6>
+          <h6 style="padding-top: 100px; font-weight: bold; padding-left: 100px;">Hello I am,</h6>
           <h1 class="heading display-3">Aqueef Alim Ansari</h1>
           <h4 class="subheading font-weight-bold">Computer Science Engineer| Web Developer | Cool.</h4>
           <div class="mr-auto">
@@ -164,6 +164,10 @@
         <!-- Content -->
         <h5 class="text-uppercase font-weight-bold">Address</h5>
         <p>Debjyoti Bhawan, 23 P.K. Biswas Road, Khardaha, Kolkata - 700117,North 24 Parganas, West Bengal</p>
+          <p>
+            <div>Email: aqueefalimansari007@gmail.com</div>
+            <div>contact: 9875672907</div>
+          </p>
 
       </div>
       <!-- Grid column -->
