--- a/index1.html
+++ b/index1.html
@@ -37,7 +37,7 @@
           <a class="nav-link text-body" href="#"><i class="fas fa-bolt"></i>THOUGHTS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-body" href="#"><i class="fas fa-mobile"></i>CONTACT</a>
+          <a class="nav-link text-body" href="#foot"><i class="fas fa-mobile"></i>CONTACT</a>
         </li>
       </ul>
        <ul class="navbar-nav ml-auto nav-flex-icons">
@@ -118,7 +118,7 @@
 <!--Main Layout-->
 <!-- Footer -->
 <footer class="page-footer font-small teal pt-4 stylish-color">
-  <div class="container">
+  <div class="container" id="foot">
 
     <!-- Social buttons -->
     <ul class="list-unstyled list-inline text-center">
