--- a/index1.html
+++ b/index1.html
@@ -31,10 +31,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link text-body" href="#"><i class="fas fa-cog fa-spin"></i>RESUME <span class="sr-only">(current)</span></a>
+          <a class="nav-link text-body" href="cv.html"><i class="fas fa-cog fa-spin"></i>RESUME <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-body" href="#"><i class="fas fa-bolt"></i>THOUGHTS</a>
+          <a class="nav-link text-body" href="thoughts.html"><i class="fas fa-bolt"></i>THOUGHTS</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-body" href="#foot"><i class="fas fa-mobile"></i>CONTACT</a>
