--- a/index1.html
+++ b/index1.html
@@ -23,7 +23,7 @@
 <header>
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar default-color">
-    <a class="navbar-brand text-body" href="#"><strong>AQUEEF ALIM ANSARI</strong></a>
+    <a class="navbar-brand text-body" href="#"><!--strong>AQUEEF ALIM ANSARI</strong--><img src="yo3.png" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
