--- a/index1.html
+++ b/index1.html
@@ -85,7 +85,8 @@
           <h1 class="heading display-3">Aqueef Alim Ansari</h1>
           <h4 class="subheading font-weight-bold">Computer Science Engineer| Web Developer | Cool.</h4>
           <div class="mr-auto">
-            <button type="button" class="btn btn-lily btn-margin btn-rounded">check my CV <i class="fas fa-caret-right ml-3"></i></button>
+             <a class="btn btn-outline-primary btn-rounded waves-effect" role="button" href="cv.html" style="margin-left: 100px">Check my CV</a>
+            <!--button type="button" class="btn btn-lily btn-margin btn-rounded">check my CV <i class="fas fa-caret-right ml-3"></i></button-->
           </div>
           
         </div>
