--- a/cv.html
+++ b/cv.html
@@ -182,11 +182,9 @@
       <!--Card content-->
       <div class="card-body text-center">
         <!--Title-->
-        <h4 class="card-title">Nature is beautiful!</h4>
+        <h4 class="card-title">coming soon!!</h4>
         <!--Text-->
-        <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-          doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.</p>
+        <p class="card-text"></p>
         <a href="#" class="btn btn-dark-green">Read more</a>
       </div>
 
@@ -214,11 +212,9 @@
       <!--Card content-->
       <div class="card-body text-center">
         <!--Title-->
-        <h4 class="card-title white-text">Read about polish plants</h4>
+        <h4 class="card-title white-text">coming soon!!</h4>
         <!--Text-->
-        <p class="card-text white-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-          quasi architecto vitae.</p>
+        <p class="card-text white-text"></p>
         <a href="#" class="btn btn-outline-white btn-md waves-effect">Read more</a>
       </div>
 
