--- a/cv.html
+++ b/cv.html
@@ -147,9 +147,7 @@
     <div class="card light-blue darken-1 text-center z-depth-2">
       <div class="card-body">
         <h3 class="text-uppercase font-weight-bold purple-text mt-2 mb-3"><strong>WORK</strong></h3>
-        <p class="white-text mb-0">Ut enim ad minima veniam, quis nostrum exercita tionem ullam corporis
-          suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis autem vel eum iure reprehenderit
-          qui in ea voluptate non proident velit esse quam. </p>
+        <p class="white-text mb-0">Coming soon!! working hard on it </p>
       </div>
     </div>
     <!--/.Card Primary-->
