--- a/cv.html
+++ b/cv.html
@@ -132,7 +132,7 @@
     <div class="card red darken-4 text-center z-depth-2">
       <div class="card-body">
         <h3 class="text-uppercase font-weight-bold light-green-text mt-2 mb-3"><strong>COLLEGE</strong></h3>
-        <p class="white-text mb-0">Currently, I am a 2nd year B.Tech Computer Science Engineering under graduate, from Maulana Abul Kalam Azad University of Technology, West Bengal(in House). I gave my EBJEE along with 12th Boards and was alloted to MAKAUT,WB. This is the best part of my life till date,and also got life lasting friends and coding partners. </p>
+        <p class="white-text mb-0">Currently, I am a 2nd year B.Tech Computer Science Engineering under graduate, from Maulana Abul Kalam Azad University of Technology, West Bengal(in House). I gave my WEBJEE along with 12th Boards and was alloted to MAKAUT,WB. This is the best part of my life till date,and also got life lasting friends and coding partners. </p>
       </div>
     </div>
     <!--/.Card Primary-->
