--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
   <link href="css/mdb.min.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
   <link href="css/style.css" rel="stylesheet">
-
+  <link rel = "icon" href = "favicon.ico">
 
 </head>
 <body>
