--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,7 @@
   <meta name="google-site-verification" content="mJ9km9L4ICTnn662oJi_IUD-5lqNAI7oqTfmNqK-3ac" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="google-site-verification" content="mJ9km9L4ICTnn662oJi_IUD-5lqNAI7oqTfmNqK-3ac" />
   <title>Aqueef Alim Ansari|Resume| Web Developer,programmer, Machine Learning Enthusiast</title>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
