--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!--Main Navigation-->
 <header>
 
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar default-color">
+  <nav class="navbar  navbar-expand-lg navbar-dark scrolling-navbar default-color">
     <a class="navbar-brand text-body" href="#"><!--strong>AQUEEF ALIM ANSARI</strong--><img src="yo3.png" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
