--- a/thoughts.html
+++ b/thoughts.html
@@ -21,10 +21,10 @@
 
          <ul class="nav justify-content-center orange lighten-4 py-4">
             <li class="nav-item">
-              <a class="navbar-brand text-body" href="index1.html"><img src="bulb1.png" alt="logo"></a>
+              <a class="navbar-brand text-body" href="index.html"><img src="bulb1.png" alt="logo"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active text-dark" href="index1.html">Home</a>
+                <a class="nav-link active text-dark" href="index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-dark" href="cv.html">Resume</a>
