--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
         <ul class="nav justify-content-center blue lighten-4 py-4">
 
             <li class="nav-item">
-              <a class="navbar-brand text-body" href="index.html"><img src="Resumepic.png" alt="logo"></a>
+              <a class="navbar-brand text-body" href="index1.html"><img src="Resumepic.png" alt="logo"></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active text-dark" href="index.html">Home</a>
