--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a class="nav-link text-body" href="thoughts.html"><i class="fas fa-bolt"></i>THOUGHTS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-body" href="#foot"><i class="fas fa-mobile"></i>CONTACT</a>
+          <a class="nav-link text-body" href="https://contact-form-60133.firebaseapp.com/"><i class="fas fa-mobile"></i>CONTACT</a>
         </li>
       </ul>
        <ul class="navbar-nav ml-auto nav-flex-icons">
