--- a/cv.html
+++ b/cv.html
@@ -32,7 +32,7 @@
                 <a class="nav-link text-dark" href="thoughts.html">Thoughts</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-dark" href="#!">Contact</a>
+                <a class="nav-link text-dark" href="https://contact-form-60133.firebaseapp.com/">Contact</a>
             </li>
             
         </ul>
