--- a/thoughts.html
+++ b/thoughts.html
@@ -14,6 +14,10 @@
   <link href="css/mdb.min.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
   <link href="css/style.css" rel="stylesheet">
+  <!-- Start WOWSlider.com HEAD section -->
+<link rel="stylesheet" type="text/css" href="engine1/style.css" />
+<script type="text/javascript" src="engine1/jquery.js"></script>
+<!-- End WOWSlider.com HEAD section -->
 
 
 </head>
@@ -34,6 +38,24 @@
             </li>
             
         </ul>
+  
+    <!-- Start WOWSlider.com BODY section -->
+<div id="wowslider-container1">
+<div class="ws_images"><ul>
+		<li><img src="data1/images/good2.jpg" alt="good2" title="good2" id="wows1_0"/></li>
+		<li><a href="http://wowslider.net"><img src="data1/images/good.jpg" alt="jquery carousel" title="good" id="wows1_1"/></a></li>
+		<li><img src="data1/images/good3.jpg" alt="good3" title="good3" id="wows1_2"/></li>
+	</ul></div>
+	<div class="ws_bullets"><div>
+		<a href="#" title="good2"><span><img src="data1/tooltips/good2.jpg" alt="good2"/>1</span></a>
+		<a href="#" title="good"><span><img src="data1/tooltips/good.jpg" alt="good"/>2</span></a>
+		<a href="#" title="good3"><span><img src="data1/tooltips/good3.jpg" alt="good3"/>3</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">bootstrap carousel</a> by WOWSlider.com v8.8</div>
+<div class="ws_shadow"></div>
+</div>	
+<script type="text/javascript" src="engine1/wowslider.js"></script>
+<script type="text/javascript" src="engine1/script.js"></script>
+<!-- End WOWSlider.com BODY section -->
 
 
 
