--- a/thoughts.html
+++ b/thoughts.html
@@ -52,7 +52,7 @@
 		<a href="#" title=""><span><img src="data1/tooltips/good2.jpg" alt=""/>1</span></a>
 		<a href="#" title=""><span><img src="data1/tooltips/good.jpg" alt=""/>2</span></a>
 		<a href="#" title=""><span><img src="data1/tooltips/good3.jpg" alt=""/>3</span></a>
-	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">bootstrap carousel</a> by WOWSlider.com v8.8</div>
+	</div></div><!--div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">bootstrap carousel</a> by WOWSlider.com v8.8</div-->
 	<div class="ws_shadow"></div>
 	</div>	
 	<script type="text/javascript" src="engine1/wowslider.js"></script>
