--- a/thoughts.html
+++ b/thoughts.html
@@ -43,7 +43,7 @@
 	<div class="ws_images">
 		<ul>
 		<li><img src="data1/images/good2.jpg" alt="" title="" id="wows1_0"/></li>
-		<li><a href="http://wowslider.net"><img src="data1/images/good.jpg" alt="jquery image carousel" title="" id="wows1_1"/></a></li>
+		<li><a href="#"><img src="data1/images/good.jpg" alt="jquery image carousel" title="" id="wows1_1"/></a></li>
 		<li><img src="data1/images/good3.jpg" alt="" title="" id="wows1_2"/></li>
 		</ul>
 	</div>
