--- a/thoughts.html
+++ b/thoughts.html
@@ -23,7 +23,10 @@
 </head>
 <body>
 
-         <ul class="nav justify-content-center orange lighten-4 py-4">
+         <ul class="nav justify-content-center orange lighten-4 py-4" style="background: #43cea2;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #185a9d, #43cea2);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #185a9d, #43cea2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+">
             <li class="nav-item">
               <a class="navbar-brand text-body" href="index.html"><img src="bulb1.png" alt="logo"></a>
             </li>
