--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,10 @@
 <body>
 <!--Main Navigation-->
 
-        <ul class="nav justify-content-center blue lighten-4 py-4">
+        <ul class="nav justify-content-center blue lighten-4 py-4" style="background: #606c88;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #3f4c6b, #606c88);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #3f4c6b, #606c88); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+">
 
             <li class="nav-item">
               <a class="navbar-brand text-body" href="index.html"><img src="Resumepic.png" alt="logo"></a>
