--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 <!--Main Navigation-->
 <header>
 
-  <nav class="navbar  navbar-expand-lg navbar-dark scrolling-navbar default-color">
+  <nav class="navbar  navbar-expand-lg navbar-dark scrolling-navbar default-color" style="background: #0cebeb;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #29ffc6, #20e3b2, #0cebeb);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #29ffc6, #20e3b2, #0cebeb); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+">
     <a class="navbar-brand text-body" href="#"><!--strong>AQUEEF ALIM ANSARI</strong--><img src="yo3.png" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
